[gd_scene load_steps=12 format=2]

[ext_resource path="res://roguelike-pack/Spritesheet/roguelikeSheet_transparent.png" type="Texture" id=1]
[ext_resource path="res://Misc/CellDoor.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 544, 119, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 544, 102, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 544, 136, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 3 ), null ],
"loop": false,
"name": "open",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 561, 119, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 561, 102, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 561, 136, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 7 ), null ],
"loop": false,
"name": "open",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 9 )

[node name="CellDoor" type="StaticBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "open"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 16, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
animation = "open"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 2, 2 )
polygon = PoolVector2Array( -10, 8, -10, 4, -11, 4, -11, 0, -10, -3, -9, -5, -8, -6, -6, -7, 7, -7, 9, -6, 10, -5, 11, -3, 12, 0, 12, 4, 11, 4, 11, 8 )

[node name="CellDoor" type="Area2D" parent="."]

[node name="CellDoorArea" type="CollisionShape2D" parent="CellDoor"]
position = Vector2( 1, 4 )
scale = Vector2( 2, 2 )
shape = SubResource( 9 )

[connection signal="area_entered" from="CellDoor" to="." method="_on_CellDoor_area_entered"]
[connection signal="area_exited" from="CellDoor" to="." method="_on_CellDoor_area_exited"]
